<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv_album_item"
    android:layout_width="@dimen/artist_image_width"
    android:layout_height="@dimen/album_image_height"
    android:layout_margin="@dimen/margin5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_album"
            android:layout_width="match_parent"
            android:layout_height="@dimen/artist_image_height" />

        <TextView
            android:id="@+id/txt_album_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin5" />

        <TextView
            android:id="@+id/txt_album_name"
            style="@style/ALbumTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/txt_plays"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin5"
                android:src="@drawable/play_ico" />

            <TextView
                android:id="@+id/txt_plays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin5"
                android:layout_marginBottom="@dimen/margin5" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>