<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.lloydsPOC.view.listing.TopArtistsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rclr_artists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>

    <ProgressBar
        android:id="@+id/prgrs_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <include
        android:id="@+id/empty_layout"
        layout="@layout/empty_results"
        android:visibility="gone"></include>
</FrameLayout>
